# fast-command

./: Cargo.toml  README.md  command.rs
examples/: example.rs
